<resources>
    <string name="app_name">ContactList</string><!--Util-->


    <!--Navigation drawer menu items-->
    <string name="text_contact_list">Contact list</string>
    <string name="text_logout">Logout</string>

    <string name="text_btn_auth_sign">Login</string>

    <string name="hint_tiet_sign_in_email">Email</string>
    <string name="hint_tiet_auth_pass">Password</string>

    <!--Edt errors-->
    <string name="msg_edt_error_empty_null">Enter email</string>
    <string name="msg_edt_error_valid_mail">Enter valid email</string>

    <string name="msg_edt_error_pass_empty_null">Enter password</string>
    <string name="msg_edt_error_pass_length">too short</string>


    <string name="register">Register</string>
    <string name="enter_your_age">enter your age</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_lable">Confirm Password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="email_lable">Email</string>
    <string name="enter_your_last_name">enter your last name</string>
    <string name="enter_your_first_name">enter your first name</string>
    <string name="login_prompt">Please log in to use application</string>
    <string name="hint_usernam">enterenter your username</string>
    <string name="login">Login</string>
    <string name="signup_prompt">Don\'t have an account?\nSign Up</string>
    <string name="registration_prompt">Fill in the following information</string>
    <string name="first_name">First Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="mark_as_important">Mark as important</string>
    <string name="color_picker">Color Picker</string>
    <string name="msg_wrong_data">"Something went wrong during registration or passwords does not hamapatasxanum"</string>

    <string name="msg_email_error">Please enter a Valid Email</string>
    <string name="msg_required_error">Valid Input Required</string>
    <string name="msg_password_error">Enter a Password</string>


    <!--Contact detail-->
    <string name="email">Email</string>
    <string name="full_name">Full Name:</string>
    <string name="phone">Phone:</string>
    <string name="notes">Notes:</string>
    <!--Util-->
    <string name="msg_network_connection_error">No Internet connection</string>
    <string name="msg_page_not_found">404 Page not found</string>
    <string name="msg_unknown_error">Unknown error</string>
    <string name="msg_bad_request">Bad request</string>
    <string name="msg_not_authorized">User not authorized</string>
    <string name="msg_connection_error">Connection error</string>
    <string name="msg_navigation_drawer_open">Open navigation drawer</string>
    <string name="msg_navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation drawer menu items-->
    <string name="hint_password">Password</string>
    <string name="msg_wrong_email_password_error">Wrong email or password</string>

    <string name="hint_email">Email</string>
    <string name="sign_up">Don\'t have an account?\nSign Up</string>
    <string name="msg_wrong_registration_error">Something went wrong during registration</string>
    <string name="hint_tiet_auth_email">Email</string>


</resources>


